# TelTelDownload

./: .gitignore  README.md  deploy.sh  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  package-lock.json  package.json  server.js  socket.js
backend/controllers/: adminController.js  mediaController.js  schedulerController.js  systemController.js  telegramController.js
backend/models/: ActivityLog.js  JobHistory.js  Media.js  ScheduledTask.js
backend/routes/: adminRoutes.js  healthRoutes.js  mediaRoutes.js  schedulerRoutes.js  systemRoutes.js  telegramRoutes.js
backend/scripts/: backfill-index.js
backend/services/: indexerService.js  schedulerService.js  sessionManager.js  telegramService.js
backend/utils/: concurrency.js  logger.js  progressEmitter.js  retry.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CommandBar.jsx  ConfirmDrawer.jsx  Drawer.jsx  EmptyState.jsx  GlobalSearchButton.jsx  Lightbox.jsx  LookupLoadingComposition.jsx  LookupModal.jsx  LookupResultCard.jsx  LookupStepper.jsx  PageHeader.jsx  ScoreRing.jsx  SessionPill.jsx  Sidebar.jsx  Skeleton.jsx  StatStrip.jsx  Stepper.jsx  Toaster.jsx
frontend/src/hooks/: useCountUp.js  useMediaQuery.js  useSessionStatus.js  useShortcuts.js  useToast.js
frontend/src/pages/: ActiveJobs.jsx  ActivityLog.jsx  ChannelDetail.jsx  Dashboard.jsx  Login.jsx  MediaManager.jsx  Scheduler.jsx  Settings.jsx
frontend/src/services/: api.js
indexer/: .dockerignore  Cargo.toml  Dockerfile  README.md
indexer/src/: error.rs  ffmpeg.rs  handlers.rs  heic.rs  main.rs  mongo.rs  phash.rs  search.rs
nginx/: nginx.conf
