[package]
name = "teltel_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web        = "4.9"
actix-multipart  = "0.7"
tokio            = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time", "fs", "io-util"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
mongodb          = "3"
bson             = { version = "2", features = ["chrono-0_4"] }
image            = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
anyhow           = "1"
thiserror        = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex              = "0.4"
once_cell        = "1"
futures-util     = "0.3"
chrono           = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto       = "thin"
